--- a/css/index.css
+++ b/css/index.css
@@ -138,3 +138,589 @@ footer ul li{
     margin-left: 20px;
     list-style: none;
 }
+
+@media screen and (max-width: 640px){
+    *{
+        margin: 0;
+        padding: 0;
+        font-family: 'Roboto Mono', monospace;
+    }
+    
+    body,html{
+        width: 100%;
+        height: 100%;
+    }
+    
+    header{
+        color: #ffffff;
+        height: 11%;
+        width: 100%;
+        background-color: #04D98B;
+        text-align: center;
+    }
+    
+    h1{
+        padding-top:15px ;
+        font-size: 18px;
+    }
+    
+    a[href="pesquisas.html"]{
+        color: #ffffff;
+        display: inline-block;
+        font-size: 10px;
+    }
+    
+    main{
+        height: 100%;
+    }
+    
+    main form{
+        border-radius: 1%;
+        margin: 9px auto;
+    }
+    
+    h2{
+        font-size: 10px;
+        margin-top: 8px;
+        text-align: center;
+        color: #04D98B;
+    }
+    
+    .f-login h2{
+        margin: auto;    
+    }
+    
+    form{
+        display: flex;
+        flex-direction: column;
+        margin: 10px auto;
+        align-items: center;
+        background-color: #63E193;
+        width: 100%;
+        height: 90%;
+    }
+    
+    form .f-login{
+        margin-top: 35px ;
+        width: 100px;
+        background-color: #ffffff;
+    }
+    form div{
+        display: flex;
+        flex-direction: column;
+        color: #ffffff;
+        font-size: 12px;
+    }
+    
+    .l-nome{
+        margin: 30px ;
+        text-align: center;
+    
+    }
+    .l-nome label, .l-senha label{
+        font-size: 15px;
+        margin-top: 40px;
+        padding-bottom: 10px ;
+    }
+    
+    .l-nome input, .l-senha input{
+        width: 100%;
+        height: 24px;
+        margin-top: 30px;
+        border-style: none;
+        outline-color: #04D98B;
+    }
+    
+    .l-senha{
+        text-align: center;
+    }
+    
+    button{
+        margin-top: 67px;
+        font-size: 10px;
+        color: #04D98B;
+        outline-color: #ffffff;
+        border: none;
+        text-align: center;
+        text-decoration: none;
+        background-color: #ffffff;
+        font-weight: bolder;
+        width: 67px;
+        height: 42px;
+    }
+    
+    footer{
+        display: flex;
+        justify-content: space-evenly;
+        color: #ffffff;
+        height: 40%;
+        background-color: #04D98B;
+        width: 100%;
+    }
+    
+    footer h1{
+        font-size: 12px;
+        margin: 10px;
+    }
+    
+    footer ul{
+        font-size: 10px;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        flex-flow: row wrap;
+    }
+    
+    li a {
+        color: #ffffff;
+        display: inline-block;
+        text-decoration: none;
+    }
+    
+    footer ul li{
+        margin-top: 35px;
+        margin-left: 10px;
+        margin-bottom: 38px;
+        list-style: none;
+    }
+}
+@media screen and (max-width: 667px){
+    *{
+        margin: 0;
+        padding: 0;
+        font-family: 'Roboto Mono', monospace;
+    }
+    
+    body,html{
+        width: 100%;
+        height: 100%;
+    }
+    
+    header{
+        color: #ffffff;
+        height: 11%;
+        width: 100%;
+        background-color: #04D98B;
+        text-align: center;
+    }
+    
+    h1{
+        padding-top:15px ;
+        font-size: 18px;
+    }
+    
+    a[href="pesquisas.html"]{
+        color: #ffffff;
+        display: inline-block;
+        font-size: 10px;
+    }
+    
+    main{
+        height: 100%;
+    }
+    
+    main form{
+        border-radius: 1%;
+        margin: 9px auto;
+    }
+    
+    h2{
+        font-size: 10px;
+        margin-top: 8px;
+        text-align: center;
+        color: #04D98B;
+    }
+    
+    .f-login h2{
+        margin: auto;    
+    }
+    
+    form{
+        display: flex;
+        flex-direction: column;
+        margin: 10px auto;
+        align-items: center;
+        background-color: #63E193;
+        width: 100%;
+        height: 90%;
+    }
+    
+    form .f-login{
+        margin-top: 35px ;
+        width: 100px;
+        background-color: #ffffff;
+    }
+    form div{
+        display: flex;
+        flex-direction: column;
+        color: #ffffff;
+        font-size: 15px;
+    }
+    
+    .l-nome{
+        margin: 30px ;
+        text-align: center;
+    
+    }
+    .l-nome label, .l-senha label{
+        font-size: 18px;
+        margin-top: 40px;
+        padding-bottom: 10px ;
+    }
+    
+    .l-nome input, .l-senha input{
+        width: 100%;
+        height: 24px;
+        margin-top: 30px;
+        border-style: none;
+        outline-color: #04D98B;
+    }
+    
+    .l-senha{
+        text-align: center;
+    }
+    
+    button{
+        margin-top: 67px;
+        font-size: 10px;
+        color: #04D98B;
+        outline-color: #ffffff;
+        border: none;
+        text-align: center;
+        text-decoration: none;
+        background-color: #ffffff;
+        font-weight: bolder;
+        width: 67px;
+        height: 42px;
+    }
+    
+    footer{
+        display: flex;
+        justify-content: space-evenly;
+        color: #ffffff;
+        height: 40%;
+        background-color: #04D98B;
+        width: 100%;
+    }
+    
+    footer h1{
+        font-size: 12px;
+        margin: 10px;
+    }
+    
+    footer ul{
+        font-size: 8px;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        flex-flow: row wrap;
+    }
+    
+    li a {
+        color: #ffffff;
+        display: inline-block;
+        text-decoration: none;
+    }
+    
+    footer ul li{
+        margin-top: 25px;
+        margin-left: 10px;
+        margin-bottom: 22px;
+        list-style: none;
+    }
+}
+@media screen and (max-width: 736px){
+    *{
+        margin: 0;
+        padding: 0;
+        font-family: 'Roboto Mono', monospace;
+    }
+    
+    body,html{
+        width: 100%;
+        height: 100%;
+    }
+    
+    header{
+        color: #ffffff;
+        height: 11%;
+        width: 100%;
+        background-color: #04D98B;
+        text-align: center;
+    }
+    
+    h1{
+        padding-top:15px ;
+        font-size: 18px;
+    }
+    
+    a[href="pesquisas.html"]{
+        color: #ffffff;
+        display: inline-block;
+        font-size: 10px;
+    }
+    
+    main{
+        height: 100%;
+    }
+    
+    main form{
+        border-radius: 1%;
+        margin: 9px auto;
+    }
+    
+    h2{
+        font-size: 10px;
+        margin-top: 8px;
+        text-align: center;
+        color: #04D98B;
+    }
+    
+    .f-login h2{
+        font-size: 15px;
+        margin: auto;    
+    }
+    
+    form{
+        display: flex;
+        flex-direction: column;
+        margin: 10px auto;
+        align-items: center;
+        background-color: #63E193;
+        width: 100%;
+        height: 90%;
+    }
+    
+    form .f-login{
+        margin-top: 35px ;
+        width: 100px;
+        background-color: #ffffff;
+    }
+    form div{
+        display: flex;
+        flex-direction: column;
+        color: #ffffff;
+        font-size: 12px;
+    }
+    
+    .l-nome{
+        margin: 30px ;
+        text-align: center;
+    
+    }
+    .l-nome label, .l-senha label{
+        font-size: 15px;
+        margin-top: 40px;
+        padding-bottom: 10px ;
+    }
+    
+    .l-nome input, .l-senha input{
+        width: 100%;
+        height: 24px;
+        margin-top: 30px;
+        border-style: none;
+        outline-color: #04D98B;
+    }
+    
+    .l-senha{
+        text-align: center;
+    }
+    
+    button{
+        margin-top: 67px;
+        font-size: 10px;
+        color: #04D98B;
+        outline-color: #ffffff;
+        border: none;
+        text-align: center;
+        text-decoration: none;
+        background-color: #ffffff;
+        font-weight: bolder;
+        width: 67px;
+        height: 42px;
+    }
+    
+    footer{
+        display: flex;
+        justify-content: space-evenly;
+        color: #ffffff;
+        height: 45%;
+        background-color: #04D98B;
+        width: 100%;
+    }
+    
+    footer h1{
+        font-size: 12px;
+        margin: 10px;
+    }
+    
+    footer ul{
+        font-size: 10px;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        flex-flow: row wrap;
+    }
+    
+    li a {
+        color: #ffffff;
+        display: inline-block;
+        text-decoration: none;
+    }
+    
+    footer ul li{
+        margin-top: 35px;
+        margin-left: 10px;
+        margin-bottom: 2px;
+        list-style: none;
+    }
+}
+@media screen and (max-width: 812px){
+    *{
+        margin: 0;
+        padding: 0;
+        font-family: 'Roboto Mono', monospace;
+    }
+    
+    body,html{
+        width: 100%;
+        height: 100%;
+    }
+    
+    header{
+        color: #ffffff;
+        height: 11%;
+        width: 100%;
+        background-color: #04D98B;
+        text-align: center;
+    }
+    
+    h1{
+        padding-top:15px ;
+        font-size: 18px;
+    }
+    
+    a[href="pesquisas.html"]{
+        color: #ffffff;
+        display: inline-block;
+        font-size: 10px;
+    }
+    
+    main{
+        height: 100%;
+    }
+    
+    main form{
+        border-radius: 1%;
+        margin: 9px auto;
+    }
+    
+    h2{
+        font-size: 10px;
+        margin-top: 8px;
+        text-align: center;
+        color: #04D98B;
+    }
+    
+    .f-login h2{
+        margin: auto;    
+    }
+    
+    form{
+        display: flex;
+        flex-direction: column;
+        margin: 10px auto;
+        align-items: center;
+        background-color: #63E193;
+        width: 100%;
+        height: 90%;
+    }
+    
+    form .f-login{
+        margin-top: 35px ;
+        width: 100px;
+        background-color: #ffffff;
+    }
+    form div{
+        display: flex;
+        flex-direction: column;
+        color: #ffffff;
+        font-size: 12px;
+    }
+    
+    .l-nome{
+        margin: 30px ;
+        text-align: center;
+    
+    }
+    .l-nome label, .l-senha label{
+        font-size: 15px;
+        margin-top: 40px;
+        padding-bottom: 10px ;
+    }
+    
+    .l-nome input, .l-senha input{
+        width: 100%;
+        height: 24px;
+        margin-top: 30px;
+        border-style: none;
+        outline-color: #04D98B;
+    }
+    
+    .l-senha{
+        text-align: center;
+    }
+    
+    button{
+        margin-top: 67px;
+        font-size: 10px;
+        color: #04D98B;
+        outline-color: #ffffff;
+        border: none;
+        text-align: center;
+        text-decoration: none;
+        background-color: #ffffff;
+        font-weight: bolder;
+        width: 67px;
+        height: 42px;
+    }
+    
+    footer{
+        display: flex;
+        justify-content: space-evenly;
+        color: #ffffff;
+        height: 40%;
+        background-color: #04D98B;
+        width: 100%;
+    }
+    
+    footer h1{
+        font-size: 12px;
+        margin: 10px;
+    }
+    
+    footer ul{
+        font-size: 10px;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        flex-flow: row wrap;
+    }
+    
+    li a {
+        color: #ffffff;
+        display: inline-block;
+        text-decoration: none;
+    }
+    
+    footer ul li{
+        margin-top: 35px;
+        margin-left: 10px;
+        margin-bottom: 32px;
+        list-style: none;
+    }
+}
