--- a/css/formulario.css
+++ b/css/formulario.css
@@ -39,36 +39,85 @@ form{
     text-align: center;
 }
 
-form div{
-    padding: 10px;
-}
 
-.pesq label{
-    padding-right: 10px;
+div h3{
+    padding: 10px;
     font-size: 20px;
     color: #ffffff;
 }
 
-.pesq input{
-    font-size: 14px;
-    width: 260px;
-    height: 26px;
-    color: #04D98B;
-    outline-color: #ffffff;
+div #pergunta_input{
+    width: 250px;
+    height: 80px;
     border: none;
+    font-size: 14px;
+    color: #04d98b;
+    outline-color:#84F2A9 ;
 }
+
+#resposta_a, #resposta_b, #resposta_c, #resposta_d{
+    width: 200px;
+    height: 30px;
+    border: none;
+    font-size: 14px;
+    color: #04d98b;
+    outline-color:#84F2A9 ;
+}
+
+.div{
+    margin: 0 0 0 15px;
+}
+div label{
+    display: inline-block;
+    margin: 5px auto;
+
+}
+
+form p{
+    color: #ffffff;
+    font-size: 14px;
+}
+label{
+    display: inline-block;
+    position: relative;
+    top: 9px;
+    left: -10px;
+}
+
+input[type="checkbox"] {
+    width: 30px;
+    height: 30px;
+}
+
+
 ::placeholder{
     text-align: center;
     color: #04D98B;
 
 }
-div h3{
-    font-size: 20px;
-    color: #ffffff;
+
+.botao{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 300px;
+    height: 70px;
+
 }
 
-div input [id ="pergunta"]{
-
+div button{
+    margin: 20px auto;
+    font-size: 20px;
+    color: #ffffff;
+    outline-color: #ffffff;
+    border: none;
+    text-align: center;
+    text-decoration: none;
+    background-color: #04D98B;
+    font-weight: bolder;
+    width: 100px;
+    height: 42px;
 }
 
 
