--- a/css/index.css
+++ b/css/index.css
@@ -30,11 +30,15 @@ a[href="pesquisas.html"]{
 }
 
 main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: #84F2A9;
     height: 70%;
 }
 
 main form{
+
     border-radius: 1%;
     margin: 30px auto;
 }
